# archetype-rust-service-tonic-workspace

./: .gitignore  .justfile  README.md  archetype.yaml
contents/{{ artifact-id }}/: .gitignore  .justfile  Cargo.toml  README.md
contents/{{ artifact-id }}/crates/{{ artifact_id }}_bin/: Cargo.toml  README.md
contents/{{ artifact-id }}/crates/{{ artifact_id }}_bin/src/: cli.rs  main.rs  settings.rs  traces.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_client/: Cargo.toml  README.md  build.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_client/src/: lib.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_core/: Cargo.toml  README.md  build.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_core/src/: conversion.rs  converters.rs  impl.rs  lib.rs  settings.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_core/tests/core/: lib.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_integration_tests/: Cargo.toml
contents/{{ artifact-id }}/crates/{{ artifact_id }}_persistence/: Cargo.toml  README.md
contents/{{ artifact-id }}/crates/{{ artifact_id }}_persistence/src/: impl.rs  lib.rs  settings.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_persistence/src/entities/: {{ prefix-name }}.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_persistence/src/migrations/: baseline.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_persistence/tests/persistence/: lib.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_server/: Cargo.toml  README.md
contents/{{ artifact-id }}/crates/{{ artifact_id }}_server/src/: lib.rs  settings.rs
contents/{{ artifact-id }}/crates/{{ artifact_id }}_server/tests/server/: lib.rs
contents/{{ artifact-id }}/manifests/kreya/: directory.krpref  localhost.krenv  {{ artifact-id }}.krproj
contents/{{ artifact-id }}/manifests/kreya/grpc/health/v1/Health/: Watch-request.json
contents/{{ artifact-id }}/manifests/kreya/grpc/reflection/v1alpha/ServerReflection/: ServerReflectionInfo-request-0.json
contents/{{ artifact-id }}/manifests/kreya/{{ artifact_id }}/{{ ArtifactId }}/: Create{{ PrefixName }}-request.json  Create{{ PrefixName }}.krop  Get{{ PrefixName }}List.krop
contents/{{ artifact-id }}/manifests/kreya/{{ prefix_name }}/service/{{ ArtifactId }}/: Create{{ PrefixName }}.krop  Find{{ PrefixName }}.krop  Get{{ PrefixName }}List.krop  Update{{ PrefixName }}.krop
contents/{{ artifact-id }}/proto/: {{ artifact_id }}.proto
contents/{{ artifact-id }}/proto/{{ prefix_name }}/: {{ suffix_name }}.proto
contents/{{ artifact-id }}/xtask/: Cargo.toml
contents/{{ artifact-id }}/xtask/src/: main.rs
