[package]
name = "{{ artifact_id }}_integration_tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[dependencies]
{{ artifact_id }}_client = { path = "../{{ artifact_id }}_client" }
{{ artifact_id }}_server = { path = "../{{ artifact_id }}_server" }
