[package]
name = "{{ artifact_id }}_persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
once_cell = "1.7"
sea-orm = { version = "^0.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "uuid" ], default-features = false }
sea-schema = { version = "0.5.0", default-features = false, features = [ "migration", "debug-print" ] }
serde = {version = "1.0", features = ["serde_derive"] }
url = { version = "2", features = ["serde"] }
testcontainers-async = { git = "https://github.com/jimmiebfulton/testcontainers-async-rust.git"}

[dev-dependencies]
tokio = {version = "1.17.0", features = ["rt", "macros"]}

[[test]]
name = "persistence"
path = "tests/persistence/lib.rs"