[package]
name = "{{ artifact_id }}_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{ artifact_id }}_core = { path = "../{{ artifact_id }}_core" }
{{ artifact_id }}_persistence = { path = "../{{ artifact_id }}_persistence" }

serde = {version = "1.0", features = ["serde_derive"] }
tonic = "0.6.2"
tonic-health = "0.5.0"
tonic-reflection = "0.3.0"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "time", "macros", "net"]}